# foto-sort

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: formatter.yml  insane.yml  merge_main_dev.yml  release.yml  test.yml
fotosort/: __main__.py  foto.py  fotosort.py  main.py
src/: foto.py  fotosort.py
src/fotosort/: config_manager.py  foto.py  fotosort.py  logger.py  main.py
tests/: test_config_manager.py  test_fotosort.py
