[project]
name = "foto-sort"
version = "0.1.0"
description = "Sort fotos by date and location of file metadata"
authors = [
    "Lukas Erhard <luerhard@googlemail.com>"
]
license = "Apache"
readme = "README.md"
python = ">=3.6"
homepage = "https://github.com/luerhard/foto-sort"
repository = "https://github.com/luerhard/foto-sort"
documentation = "https://github.com/luerhard/foto-sort"

keywords = ["foto", "photo", "sort", "copy", "organize", "location", "date"]

classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Image Processing"
]

# Requirements
[dependencies]
pyexiftool = ">=0.4.9"
reverse-geocode = ">=1.4.1"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
