[tool.poetry]
name = "foto-sort"
version = "0.2.0"
packages = [{include = "fotosort", from="src/"}]
description = "Sort fotos by date and location of file metadata"
authors = [
    "Lukas Erhard <luerhard@googlemail.com>"
]
license = "Apache"
readme = "README.md"
homepage = "https://github.com/luerhard/foto-sort"
repository = "https://github.com/luerhard/foto-sort"
documentation = "https://github.com/luerhard/foto-sort"

keywords = ["foto", "photo", "sort", "copy", "organize", "location", "date"]

classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Image Processing"
]

# Requirements
[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyexiftool = ">=0.5.6"
reverse-geocode = ">=1.4.1"
numpy = [{version = ">=1.7", python = "<=3.12"}, {version = ">=1.26", python = ">=3.12"}]
scipy = [{version = ">=1.6", python = "<=3.12"}, {version = ">=1.11.3", python = ">=3.12"}]
tqdm = "^4.66.2"
click = "^8.1.7"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"

[tool.poetry.scripts]
fotoingest = "fotosort.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
